--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
+appnope==0.1.0
 argparse==1.2.1
 beautifulsoup4==4.4.0
 decorator==4.0.2
-distribute==0.6.24
+gnureadline==6.3.3
 ipython==4.0.0
 ipython-genutils==0.1.0
 lxml==3.5.0b1
+nose==1.3.7
 path.py==8.1.1
 pexpect==3.3
 pickleshare==0.5
