--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ nose==1.3.7
 path.py==8.1.1
 pexpect==3.3
 pickleshare==0.5
+py==1.4.30
+pytest==2.7.3
 requests==2.7.0
 sh==1.11
 simplegeneric==0.8.1
