--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "2.7"
 install: "pip install -r requirements.txt"
-script: py.test -v ./test*.py
+script: run_tests.sh
